# src/main/java/se/sundsvall/billingpreprocessor/integration/db/model/enums/Status.java
@@ -2,7 +2,7 @@ package se.sundsvall.billingpreprocessor.integration.db.model.enums;
 
 import io.swagger.v3.oas.annotations.media.Schema;
 
-@Schema(description = "Billing status model", enumAsRef = true, example = "APPROVED")
+@Schema(description = "Billing status model", enumAsRef = true, examples = "APPROVED")
 public enum Status {
 	NEW,
 	APPROVED,
