# src/test/resources/api/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.1.0
 info:
   title: api-billing-preprocessor
   contact: { }
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "4.2"
 servers:
-  - url: http://localhost:61822
+  - url: http://localhost:49918
     description: Generated server url
 tags:
   - name: Status Resource
@@ -259,17 +259,17 @@ paths:
           description: Zero-based page index (0..N)
           required: false
           schema:
-            minimum: 0
             type: integer
             default: 0
+            minimum: 0
         - name: size
           in: query
           description: The size of the page to be returned
           required: false
           schema:
-            minimum: 1
             type: integer
             default: 20
+            minimum: 1
         - name: sort
           in: query
           description: "Sorting criteria in the format: property,(asc|desc). Default\
@@ -486,6 +486,12 @@ components:
     Problem:
       type: object
       properties:
+        status:
+          $ref: "#/components/schemas/StatusType"
+        title:
+          type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
@@ -494,22 +500,15 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
-        detail:
-          type: string
-        title:
-          type: string
+          additionalProperties: { }
     StatusType:
       type: object
       properties:
-        reasonPhrase:
-          type: string
         statusCode:
           type: integer
           format: int32
+        reasonPhrase:
+          type: string
     ConstraintViolationProblem:
       type: object
       properties:
@@ -550,15 +549,14 @@ components:
           type: string
         message:
           type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
-        detail:
-          type: string
+          additionalProperties: { }
         suppressed:
           type: array
           items:
@@ -595,8 +593,7 @@ components:
     ThrowableProblem:
       type: object
       properties:
-        cause:
-          $ref: "#/components/schemas/ThrowableProblem"
+        cause: { }
         stackTrace:
           type: array
           items:
@@ -621,6 +618,12 @@ components:
                 type: boolean
         message:
           type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
+        title:
+          type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
@@ -629,14 +632,7 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
-        detail:
-          type: string
-        title:
-          type: string
+          additionalProperties: { }
         suppressed:
           type: array
           items:
@@ -679,81 +675,91 @@ components:
           type: string
     AccountInformation:
       type: object
+      description: Account information model
       properties:
         costCenter:
           type: string
           description: Cost center
-          example: "15800100"
+          examples:
+            - "15800100"
         subaccount:
           type: string
           description: Subaccount
-          example: "936300"
+          examples:
+            - "936300"
         department:
           type: string
           description: Department
-          example: "920360"
+          examples:
+            - "920360"
         accuralKey:
           type: string
           description: Accural key
-          example: "5647"
+          examples:
+            - "5647"
         activity:
           type: string
           description: Activity
-          example: "5756"
+          examples:
+            - "5756"
         article:
           type: string
           description: Article
-          example: Electric bicycle
+          examples:
+            - Electric bicycle
         project:
           type: string
           description: Project
-          example: "11041"
+          examples:
+            - "11041"
         counterpart:
           type: string
           description: Counterpart
-          example: "11830000"
+          examples:
+            - "11830000"
         amount:
           type: number
           description: Amount
-          example: 1399.95
-      description: Account information model
+          examples:
+            - "1399.95"
     AddressDetails:
       type: object
+      description: Address details model
       properties:
         street:
           type: string
           description: Street name and number. Mandatory for EXTERNAL billing record.
-          example: Sesame Street 7
+          examples:
+            - Sesame Street 7
         careOf:
           type: string
           description: Care of name
-          example: Abby Cadabby
+          examples:
+            - Abby Cadabby
         postalCode:
           type: string
           description: Postal code. Mandatory for EXTERNAL billing record.
-          example: "12345"
+          examples:
+            - "12345"
         city:
           type: string
           description: City. Mandatory for EXTERNAL billing record.
-          example: Grouchytown
-      description: Address details model
+          examples:
+            - Grouchytown
     BillingRecord:
-      required:
-        - category
-        - invoice
-        - status
-        - type
       type: object
+      description: Billing record model
       properties:
         id:
           type: string
           description: Unique id for the billing record
+          examples:
+            - 71258e7d-5285-46ce-b9b2-877f8cad8edd
           readOnly: true
-          example: 71258e7d-5285-46ce-b9b2-877f8cad8edd
         category:
-          pattern: ACCESS_CARD|CUSTOMER_INVOICE|SALARY_AND_PENSION|ISYCASE
           type: string
           description: Billing category
+          pattern: ACCESS_CARD|CUSTOMER_INVOICE|SALARY_AND_PENSION|ISYCASE
         type:
           $ref: "#/components/schemas/Type"
         status:
@@ -762,177 +768,201 @@ components:
           type: string
           description: Information regarding the person that has approved the billing
             record
-          example: Big Bird
+          examples:
+            - Big Bird
         approved:
           type: string
-          description: Timestamp when the billing record got approved status
           format: date-time
+          description: Timestamp when the billing record got approved status
+          examples:
+            - 2022-11-21T16:57:13.988+02:00
           readOnly: true
-          example: 2022-11-21T16:57:13.988+02:00
         recipient:
           $ref: "#/components/schemas/Recipient"
         invoice:
           $ref: "#/components/schemas/Invoice"
         created:
           type: string
-          description: Timestamp when the billing record was created
           format: date-time
+          description: Timestamp when the billing record was created
+          examples:
+            - 2022-10-31T14:30:00.001+02:00
           readOnly: true
-          example: 2022-10-31T14:30:00.001+02:00
         modified:
           type: string
-          description: Timestamp when the billing record was last modified
           format: date-time
+          description: Timestamp when the billing record was last modified
+          examples:
+            - 2022-11-14T08:57:42.358+02:00
           readOnly: true
-          example: 2022-11-14T08:57:42.358+02:00
         extraParameters:
           type: object
           additionalProperties:
             type: string
-            description: A map of extra parameters for custom values on the billing
-              record
-            example: "{\"caseId\":\"abc123\",\"uuid\":\"82a400cf-eb02-4a18-962d-fde55440868f\"\
-              }"
           description: A map of extra parameters for custom values on the billing
             record
-          example:
-            caseId: abc123
-            uuid: 82a400cf-eb02-4a18-962d-fde55440868f
-      description: Billing record model
+          examples:
+            - "{\"caseId\":\"abc123\",\"uuid\":\"82a400cf-eb02-4a18-962d-fde55440868f\"\
+            }"
+      required:
+        - category
+        - invoice
+        - status
+        - type
     Invoice:
+      type: object
+      description: Invoice model
+      properties:
+        customerId:
+          type: string
+          description: Customer number in Raindance
+          examples:
+            - "16"
+          minLength: 1
+        description:
+          type: string
+          description: Description of the invoice
+          examples:
+            - "Errand number: 2113-01784"
+          minLength: 1
+        ourReference:
+          type: string
+          description: Our reference
+          examples:
+            - Harvey Kneeslapper
+        customerReference:
+          type: string
+          description: Customer reference
+          examples:
+            - Alice Snuffleupagus
+          minLength: 1
+        date:
+          type: string
+          format: date
+          description: Date for the invoice
+          examples:
+            - 2022-12-24
+        dueDate:
+          type: string
+          format: date
+          description: Due date for the invoice
+          examples:
+            - 2022-12-24
+        totalAmount:
+          type: number
+          description: Total sum of all invoice rows
+          examples:
+            - "1399.95"
+          readOnly: true
+        invoiceRows:
+          type: array
+          items:
+            $ref: "#/components/schemas/InvoiceRow"
+          minItems: 1
       required:
         - customerId
         - customerReference
         - description
         - invoiceRows
-      type: object
-      properties:
-        customerId:
-          minLength: 1
-          type: string
-          description: Customer number in Raindance
-          example: "16"
-        description:
-          minLength: 1
-          type: string
-          description: Description of the invoice
-          example: "Errand number: 2113-01784"
-        ourReference:
-          type: string
-          description: Our reference
-          example: Harvey Kneeslapper
-        customerReference:
-          minLength: 1
-          type: string
-          description: Customer reference
-          example: Alice Snuffleupagus
-        date:
-          type: string
-          description: Date for the invoice
-          format: date
-          example: 2022-12-24
-        dueDate:
-          type: string
-          description: Due date for the invoice
-          format: date
-          example: 2022-12-24
-        totalAmount:
-          type: number
-          description: Total sum of all invoice rows
-          readOnly: true
-          example: 1399.95
-        invoiceRows:
-          minItems: 1
-          type: array
-          items:
-            $ref: "#/components/schemas/InvoiceRow"
-      description: Invoice model
     InvoiceRow:
       type: object
+      description: Invoice row model
       properties:
         descriptions:
           type: array
           items:
-            maxLength: 30
-            minLength: 1
             type: string
             description: Description of row
-            example: Row with description
+            examples:
+              - Row with description
+            maxLength: 30
+            minLength: 1
         detailedDescriptions:
           type: array
           items:
-            minLength: 1
             type: string
             description: Detailed description of row
-            example: Row with detailed description
+            examples:
+              - Row with detailed description
+            minLength: 1
         totalAmount:
           type: number
           description: Total sum of invoice row
+          examples:
+            - "1399.95"
           readOnly: true
-          example: 1399.95
         vatCode:
-          pattern: 00|06|12|25
           type: string
           description: VAT code for invoice row
-          example: "25"
+          examples:
+            - "25"
+          pattern: 00|06|12|25
         costPerUnit:
           type: number
           description: Cost per unit
-          example: 155.55
+          examples:
+            - "155.55"
         quantity:
           type: number
           description: Total amount of units
-          example: 9.0
+          examples:
+            - "9.0"
         accountInformation:
           type: array
           description: Account information
           items:
             $ref: "#/components/schemas/AccountInformation"
-      description: Invoice row model
     Recipient:
-      required:
-        - addressDetails
       type: object
+      description: Billing recipient model
       properties:
         partyId:
           type: string
           description: Unique id for the person issuing the billing record. Mandatory
             for EXTERNAL billing record if legalId is null.
-          example: f0882f1d-06bc-47fd-b017-1d8307f5ce95
+          examples:
+            - f0882f1d-06bc-47fd-b017-1d8307f5ce95
         legalId:
           type: string
           description: LegalId for the organization issuing the billing record. Mandatory
             for EXTERNAL billing record if partyId is null.
-          example: "3456789123"
+          examples:
+            - "3456789123"
         organizationName:
           type: string
           description: Name of issuing organization of the billing record if the recipient
             is an organization
-          example: Sesame Merc AB
+          examples:
+            - Sesame Merc AB
         firstName:
           type: string
           description: First name of the billing record recipient
-          example: Alice
+          examples:
+            - Alice
         lastName:
           type: string
           description: Last name of the billing record recipient
-          example: Snuffleupagus
+          examples:
+            - Snuffleupagus
         userId:
           type: string
           description: User id of the billing record recipient
-          example: ALI22SNU
+          examples:
+            - ALI22SNU
         addressDetails:
           $ref: "#/components/schemas/AddressDetails"
-      description: Billing recipient model
+      required:
+        - addressDetails
     Status:
       type: string
       description: Billing status model
-      example: APPROVED
       enum:
         - NEW
         - APPROVED
         - INVOICED
         - REJECTED
+      examples:
+        - APPROVED
     Type:
       type: string
       description: Billing type model
@@ -941,6 +971,7 @@ components:
         - INTERNAL
     InvoiceFileStatus:
       type: object
+      description: InvoiceFile status model
       properties:
         id:
           type: string
@@ -958,7 +989,6 @@ components:
         sentAt:
           type: string
           format: date-time
-      description: InvoiceFile status model
     PageBillingRecord:
       type: object
       properties:
@@ -972,6 +1002,13 @@ components:
           type: boolean
         last:
           type: boolean
+        sort:
+          $ref: "#/components/schemas/SortObject"
+        numberOfElements:
+          type: integer
+          format: int32
+        pageable:
+          $ref: "#/components/schemas/PageableObject"
         size:
           type: integer
           format: int32
@@ -982,40 +1019,33 @@ components:
         number:
           type: integer
           format: int32
-        sort:
-          $ref: "#/components/schemas/SortObject"
-        pageable:
-          $ref: "#/components/schemas/PageableObject"
-        numberOfElements:
-          type: integer
-          format: int32
         empty:
           type: boolean
     PageableObject:
       type: object
       properties:
-        offset:
-          type: integer
-          format: int64
         sort:
           $ref: "#/components/schemas/SortObject"
-        pageSize:
+        paged:
+          type: boolean
+        pageNumber:
           type: integer
           format: int32
-        pageNumber:
+        pageSize:
           type: integer
           format: int32
         unpaged:
           type: boolean
-        paged:
-          type: boolean
+        offset:
+          type: integer
+          format: int64
     SortObject:
       type: object
       properties:
-        empty:
+        sorted:
           type: boolean
         unsorted:
           type: boolean
-        sorted:
+        empty:
           type: boolean
   securitySchemes: { }
